# MACKI_app

./: .flake8  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  mako.xml  pyproject.toml  test.json
.devcontainer/: devcontainer.json  post_start.sh
.github/workflows/: gitci.yml  main.yml
config/: DEV_000A4727B2BF_settings.xml  DEV_000A472B9D47_settings.xml  alvium2.xml  commands.json  data_parser.json  data_plot.json  data_text.json  experiment_data_plot.json  experiment_data_text.json  mako.xml  procedures.json  service_commands.json
docs/: class_diagram.puml
resources/: theme.qss
scripts/: save_settings.py
src/: main.py  main.qml  test.py
src/app/: app.py  camera_widget.py  camera_widget_utils.py  cameras_app.py  config.py  experiment_window.py
src/cameras/: __init__.py  camera.py  camera_handler.py  cameras_manager.py  cameras_menager.py  frames_handler.py  q_camera.py  q_camera_utils.py  q_cameras_menager.py
src/com/: com_proto_basic.py  macus_serial.py  serial_port.py
src/commands/: __init__.py  qt_cmd_group.py
src/communication/: __init__.py  communication_protocol_basic.py  macus_serial.py
src/data_displays/: __init__.py
src/data_logger/: __init__.py  data_logger.py
src/data_parser/: __init__.py  data_parser.py  data_parser_string.py
src/data_viewers/: __init__.py
src/procedures/: procedure_command.py  procedure_configuration.py  procedure_configurator.py  procedure_parameters.py  procedure_plot.py  procedure_table.py  procedures_widget.py
src/utils/: colors.py  numbers.py
tests/: conftest.py
tests/_/: test_tear_up.py
tests/cameras/: test_camera_menager.py
tests/com/: test_serial.py  (+2 more)
(+115 files in other folders)
