[tool.poetry]
name = "macki-app"
version = "0.1.0"
description = ""
authors = ["JSiuda1 <jakkub68@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
pyside6 = "^6.7.2"
vmbpy = {path = "VimbaX/vmbpy-1.0.4-py3-none-any.whl"}
mypy = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
