[tool.poetry]
name = "macki-app"
version = "0.1.0"
description = ""
authors = ["JSiuda1 <jakkub68@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">3.12 <3.13"
pyside6 = "^6.7.2"
numpy = "^1.26.0"
vmbpy = {path = "VmbPy"}
pytest-mock = "^3.14.0"
pyqt6 = "^6.7.1"
opencv-python = "^4.10.0.84"
pyqtgraph = "^0.13.7"
pglive = "^0.7.6"
pyserial = "^3.5"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
flake8 = "^7.1.1"
black = "^24.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
